[package]
name = "pava"
version = "0.1.0"
authors = ["Christoph Schulz <schulzcbs@gmail.com>"]
edition = "2018"
homepage = "https://github.com/schulzch/pava"
repository = "https://github.com/schulzch/pava"
readme = "README.md"
keywords = [
    "pool-adjacent-violator",
    "isotonic",
    "regression"
]
categories = ["algorithms"]
license = "Apache-2.0"
description = """
An implementation of the Pool-Adjacent-Violators algorithm for isotonic regression.
"""

[dev-dependencies]
rand = "0.5"
svg = "0.5"
